active link added & text alignment issue solved

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1500px;
   margin: 0;
   padding: 0, 2em;
-  text-align: center;
 }
 
 .logo {
